Os fluxos impactados diretamente são estes:
Listar aprovações pendentes
Endpoint: GET /records/pending-approvals
Método: listPendingApprovals(...) no TimeRecordService
Impacto:
deixa de montar a página com várias consultas por item
passa a carregar página + dados auxiliares em lote
mantém o mesmo contrato de resposta TimeRecordApprovalPageResponse
Listar solicitações de férias
Endpoint: GET /records/vacation-request?status=&employeeName=&page=&size=
Método: listVacationRequests(...) no TimeRecordService
Impacto:
filtro de nome e status sai do Java e vai para SQL
a consolidação de períodos contínuos de férias passa a ser resolvida na consulta
o retorno continua sendo List<VacationRequestResponse> para não quebrar o que já existe
Listar solicitações de abono / esquecimento de marcação
Endpoint: GET /records/time-off/requests?status=&employeeName=&page=&size=
Método: listTimeOffRequests(...) no TimeRecordService
Impacto:
paginação real no banco
filtro de nome e status no SQL
documentos deixam de ser buscados um a um
mantém o mesmo contrato TimeRecordPageResponse

Além desses três fluxos HTTP, foram impactadas indiretamente estas camadas:

TimeRecordRepository e TimeRecordProvider
porque passam a concentrar as queries paginadas reais para férias e time off
TimeRecordApprovalRepository e TimeRecordApprovalProvider
porque a listagem de approvals precisa de countQuery explícita e ordenação consistente no banco
DocumentRepository e DocumentProvider
porque foi necessário trocar findByTimeRecordId(...) em loop por carga em lote via timeRecordId IN (...)
EmployeeProvider e UserProvider
porque approvals e time off precisavam buscar funcionários e usuários em lote, e não mais com findById(...) por item

O que não foi impactado por esse patch:

requestVacation(...)
approveVacation(...)
rejectVacation(...)
requestTimeOff(...)
approveTimeOff(...)
rejectTimeOff(...)
approveTimeRecordChange(...)
rejectTimeRecordChange(...)

Ou seja: o patch mexe nas telas/listagens operacionais, não 